css/style.css
@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');

:root {
    --apppink: rgb(255, 136, 231);
    --appblack:#232a36;
    --appimage: white;
}
:root .light-mode
{
    --apppink: #7868e6;
    --appblack: #d3e0ea;
    --appimage: black;
}
@font-face {
    font-family: mainfont;
    src: url(../fonts/Product_Sans_Regular.ttf) format('truetype');
}
@font-face {
    font-family: mainfontbold;
    src: url(../fonts/Product_Sans_Bold.ttf) format('truetype');
}
@font-face {
    font-family: mathfont;
    src: url(../fonts/BalsamiqSans-Regular.ttf) format('truetype');
}

body {
    background-color: var(--appblack);
    font-family:mainfont;
    overflow-x: hidden;
    height:100vh;
}
body img {
    filter:invert(100%);
}
html{
    overflow-x: hidden;
}
.container{
    padding-bottom: 70%;
    padding-top: 15%;
}
p {
    color: var(--appimage);
    font-size: 20px;
}

.readonlybody {
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -ms-user-select: none;
    touch-action: auto;
    overflow-y: scroll !important;
    /*position: relative !important;*/
}
.form-control{
    border-radius: 50px;
    margin:2px;
}

.btn {
    border-radius: 100px !important;
}

a, p, label {
    color: var(--appimage) !important;
}

h1, h2, h3, h4, h5, h6 {
    color: var(--apppink);
}

.modal-title {
    color: #343a40;
}
.modal-body{
    background:var(--appblack);
}

.ulstyle {
    position: fixed;
    top: 0;
    left: 0;
    padding: 0 !important;
    height: 100%;
    background: var(--appblack);
}

.ulstyle li {
    list-style-type: none;
    padding: 10px !important;
}

.ulstyle li a {
    color: var(--appimage) !important;
    font-family: mathfont;
    letter-spacing: 1px;
}

.ulstyle li a:hover, .ulstyle li a:active {
    color: white !important;
}
.stopwrap {
    white-space: nowrap;
    overflow-y: hidden;
    overflow-x: auto;
    width: 100%;
    height: 100%;
    display: grid;
}

.carddis {
    width: 100%;
    background: white;
    color: black;
    border-radius: 40px;
    outline: none !important;
    padding: 15px;
    font-size: 20px;
    margin: 10px;
}

#fav-button{
    position:relative;
    display:block;
    z-index: 10;
    float:right;
    padding: 0px 10px 2px 10px;
    text-transform: uppercase;
    border-radius:8px;
    border-color: white;
    color:var(--apppink);
    background-color: var(--appblack);
    outline: none;
    transition-duration: 0.4s;
}
#fav-button:hover{
    background-color: rgba(255, 244, 253, 0.993);
    font-weight: bolder;
}
.favouritecontainer {
    position: fixed;
    left: 76%;
    right: 0%;
    top: 15%;
    bottom: -15px ;
    background-color:#02050a00;
    padding: 20px;
    padding-right: 0px;
    padding-left: 0;
    z-index:900;
    border-top-left-radius: 30px;
    border-top-right-radius: 30px;
    overflow-y: auto !important;
    overflow-x: hidden !important;
}
#favourite:ul{
    padding-right:0 ;
    list-style: none;
}
.favourites {
    border-top-left-radius: 18px;
    border-bottom-left-radius: 18px;
    border-top: 1px solid var(--apppink);
    border-bottom: 1px solid var(--apppink);
    border-left: 1px solid var(--apppink);
    background-color: var(--appblack);
    margin: 10px;
    padding: 15px;
    text-align:center;
    color: white !important;
    cursor:pointer;
}

.favnew{
    height: fit-content;
    border-top-left-radius: 18px;
    border-bottom-left-radius: 18px;
    border-top: 1px solid var(--apppink);
    border-bottom: 1px solid var(--apppink);
    border-left: 1px solid var(--apppink);
    background: var(--apppink)!important;
    margin-left: 0px;
    font-size: 120%;
  
  }

.favourites:hover{
    background-color: rgb(255, 136, 231);
    cursor:pointer;
}
@media screen and (max-width:600px)
{
    .favouritecontainer
    {
        left: 10%;
        right:5%;
        top: 15%;
        bottom: -15px;
        background-color: #232a36ce;
    }
    .favourites {
        border-top-right-radius: 18px;
        border-bottom-right-radius: 18px;
        border-top: 1px solid var(--apppink);
        border-bottom: 1px solid var(--apppink);
        border-left: 1px solid var(--apppink);
        background-color: var(--appblack);
        margin: 10px;
        padding: 15px;
        text-align:center;
        color: white !important;
        cursor:pointer;
    }
}

::selection{
    color:var(--appblack);
    background-color: var(--apppink);

}
.mainheading {
    color: white;
    display: inline;
}

#search-txt {
  border: none;
  background: none !important;
  outline: none;
  float: left;
  padding: 0;
  color: white;
  font-size: 16px;
  transition: 0.4s;
  line-height: 40px;
  width: 0px;
}
.searchbtn {
  background: #ff299c;
  color: #f1faee;
  border-radius: 50%;
  float: right;
  height: 40px;
  width: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  outline: none !important;
}
#box {
  position: fixed !important;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: #ff299c;
  height: 60px;
  border-radius: 40px;
  padding: 10px;
}
#box:hover > #search-txt {
  width: 240px;
  padding: 0 6px;
}
#box:hover > .searchbtn {
  background: #0bd54f;
}

.bor {
    border-right: 0.2rem solid var(--appimage) !important;
    border-top: none !important;
}


.form__field {
    font-family: mainfont;
    font-size: 15px !important;
    letter-spacing: 2px;
    width: 100%;
    border: 0;
    border-bottom: 1px solid var(--appimage);
    outline: 0;
    color: var(--appimage);
    padding: 7px 0;
    background: transparent;
    transition: border-color 0.2s;
}

.bi {
    background-image: linear-gradient(to right top, #cfcfcf, #d6d1d8, #e3d2dc, #f1d3db, #ffd4d4);
}

.dropdownlogo {
    padding-left:15px ;
    height: 20px;
    filter: invert(100%);
}
.katex{
    font-size: 25px !important;
    display: flex;
    
}
#numberfact{
    font-family: 'Berkshire Swash', cursive;
    letter-spacing: 2px;
    font-size: 25px;
    text-align: center !important;
    margin-top: auto;
    margin-bottom: auto;
    color: var(--apppimage);
    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
    background-color: #26282b;
    border-bottom-right-radius: 35px;
    border-top-left-radius: 35px;
    transition: all 0.2s;
    cursor: pointer;
}
#numberfact:hover {
    font-size: 25.5px;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
    background-color: var(--appblack);
}

ul li .table{
    margin-bottom: 0;
}

.error{
    font-size:0.8em;
    color:red;
}

.home{
    height: fit-content;
    /* background: rgba(255, 136, 231,0.5); */
    background: var(--apppink)!important;
    margin: 13px;
    border-radius: 36px;
    font-size: large;
  }
  
  
  .list_menu_items a:hover {
   /* background: rgba(255, 136, 231,0.5)!important; */
   background: var(--apppink)!important;
   border-radius: 36px;

   }
   #about .table td{
       text-align: center;

   }
  .table td:hover{
      
       border-top: 1px solid #dee2e6;
       border-radius: 36px;     
    
  }

 .list_menu_items{
     max-height: fit-content;
 }
.calculator span.mul
{
    color: white;
}



/*light mode*/

.light-mode .table td a
{
  color: var(--apppimage)!important;
}

.light-mode #factorsoption
{
    color: var(--apppimage)!important;
}

.light-mode #numberfact
{
    color: var(--apppimage) !important;
    box-shadow: rgba(117, 110, 110, 0.3), rgba(rgba(201, 196, 196, 0.22);
    background-color: #0571dd;
}
.light-mode .table td:hover{
       text-decoration: none;
       text-shadow: none;
       font-weight: bold;
       font-variant: small-caps; 
  }
.light-mode .btn.btn-outline-light{
    color: black; 
    border-color: black;
}
.light-mode .stopwrap {
    background: none;
    color: white;
}

.light-mode .bi {
    background-image: linear-gradient(to right top, #ccf2f4, #f4f9f9, #a4ebf3);
    color: black;
}
.light-mode input{
    color: black;
}

#resulttable table td
{
    color: var(--appimage);
    border-color: var(--appimage);
}

.light-mode table.table-bordered.table-dark td, .light-mode table.table-bordered.table-dark th
{
    color: black;
    border: none;
    background-color: #d3e0ef;
}
.light-mode table.table-bordered.table-dark th
{
   border-color: black;
   border-style: double;
}
.light-mode table.table-bordered td, .light-mode table.table-bordered th
{
    color: black;
    border: none;
    background-color: #d3e0ef;
}
.light-mode table.table-bordered.table-dark th
{
   border-color: black;
   border-style: double;
}
.light-mode img
{
    filter:none;
}
span.mul img, span.divi img, span.plus img, span.sub img{
    filter: none;
}
.light-mode span.mul img, .light-mode span.divi img, .light-mode span.plus img, .light-mode span.sub img{
    filter: invert(100%);
}
.light-mode .favourites{
    color: black !important;
}
.light-mode .favnew{
    color: white !important;
}
.light-mode #fav-button{
    border-color: #7868e6;
}
.light-mode #fav-button:hover{
    background-color: white;
    font-weight: bolder;
}

